--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -98,6 +98,9 @@ body {
   font-size: 14px;
   gap: 8px;
 }
+.box-header__bot-btn {
+  display: none;
+}
 
 @media (max-width: 767.98px) {
   .box-header {
@@ -834,6 +837,8 @@ body {
   /* text-align: center;
   justify-content: center; */
   align-items: center;
+  color: #667479;
+  font-weight: 400;
 }
 .footer-section__logo {
   width: 20%;
@@ -921,11 +926,38 @@ body {
   .footer-section__form {
     flex-wrap: wrap;
   }
-  .footer-section__form btn {
+  .footer-section__form button {
     width: 100%;
     text-align: center;
     justify-content: center;
     align-items: center;
+  }
+  .footer-section__social li a i {
+    font-size: 20px;
+  }
+  .footer-section__copy-right {
+    width: 100%;
+    text-align: center;
+    font-size: 10px;
+    align-items: center;
+    justify-content: center;
+  }
+  .footer-section__logo {
+    width: 100%;
+    margin-bottom: 32px;
+  }
+  .footer-section__links {
+    width: 100%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 12px;
+    margin-bottom: 12px;
+  }
+}
+@media (max-width: 380.98px) {
+  .footer-section__item {
+    gap: 16px;
   }
 }
 .breadcrumb {
