--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -112,6 +112,9 @@ body {
             gap: 8px;
         }
     }
+    &__bot-btn{
+        display: none;
+    }
 }
 
 
@@ -1038,6 +1041,8 @@ body {
         /* text-align: center;
         justify-content: center; */
         align-items: center;
+        color: #667479;
+        font-weight: 400;
     }
 
     &__logo {
@@ -1160,16 +1165,48 @@ body {
         &__form {
             flex-wrap: wrap;
 
-            & btn {
+            & button {
                 width: 100%;
                 text-align: center;
                 justify-content: center;
                 align-items: center;
             }
         }
+        &__social li a i{
+            font-size: 20px;
+        }
+        &__copy-right{
+            width: 100%;
+            text-align: center;
+            font-size: 10px;
+            align-items: center;
+            justify-content: center;
+        }
+        &__logo{
+            width: 100%;
+            margin-bottom: 32px;
+        }
+        &__links {
+            width: 100%;
+            text-align: center;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            margin-bottom: 12px;
+        }
+    }
+
+}
+@media (max-width: 380.98px){
+    .footer-section{
+        &__item{
+            gap: 16px;
+            // align-items: normal;
+            // text-align: normal;
+            // justify-content: normal;
+        }
     }
 }
-
 //end footer
 
 //begin breadcrumb
